tests/fixtures/negative/style/ClassOrdering.kt
package style

class MyClass {
    val name: String = "test"

    fun doSomething() {
        println("hello")
    }
}
